--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,6 @@
 
 <!-- <app-communityprofile></app-communityprofile> -->
 <!-- <app-meetnow></app-meetnow> -->
-
-<router-outlet></router-outlet>
+<app-get-recommended-communities></app-get-recommended-communities>
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-requestedmeeting></app-requestedmeeting> -->
